# rubiks

./: .gitignore  LICENSE  README.md  package.yaml  rubiks.cabal
src/: Rules.hs  Types.hs
src/Show/: Ansi.hs  Text.hs
src/Simulator/: Cube.hs  Rules.hs  Types.hs
test/: RulesSpec.hs
test/hlint/: Hlint.hs
