name:                rubiks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/monadegmailcom/rubiks#readme
license:             BSD3
license-file:        LICENSE
author:              monade
maintainer:          monade@gmail.com
copyright:           2017 monade
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simulator.Rules
                     , Simulator.Types
  build-depends:       base >= 4.7 && < 5
                     , lens
  default-language:    Haskell2010

executable rubiks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rubiks
  default-language:    Haskell2010

test-suite rubiks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       RulesSpec
  build-depends:       base
                     , rubiks
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/monadegmailcom/rubiks
